--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag psacr02.azurecr.io/<your-name>app01:latest
+      run: docker build . --file Dockerfile --tag psacr02.azurecr.io/sidapp02:latest
       
     - name: Azure Container Registry Login
       uses: Azure/docker-login@v1
@@ -28,7 +28,7 @@ jobs:
         login-server: psacr02.azurecr.io
         
     - name: Push Image  
-      run: docker push psacr02.azurecr.io/<your-name>app01:latest
+      run: docker push psacr02.azurecr.io/sidapp02:latest
       
   deploy:
     runs-on: ubuntu-latest
